updated README in markdown format - figuring out what format github understands for links

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-I'm following <a href="http://ecarmi.org/writing/django-on-joyent/" title="A (Complete) Guide to Running Django on Joyent Shared Accelerators using Virtualenv, pip, git, and NginX | ecarmi.org">Evan's tutorial on setting up Django on a Joyent shared accelerator</a> and have created this as an example application using <a href="http://www.djangoproject.com/" title="Django | The Web framework for perfectionists with deadlines">Django</a>'s built-in <a href="http://docs.djangoproject.com/en/dev/ref/contrib/flatpages/?from=olddocs" title="Django | The flatpages app | Django documentation">Flatpages app</a>.
+I'm following [Evan's tutorial on setting up Django on a Joyent shared accelerator](http://ecarmi.org/writing/django-on-joyent/ "A (Complete) Guide to Running Django on Joyent Shared Accelerators using Virtualenv, pip, git, and NginX | ecarmi.org") and have created this as an example application using [Django](http://www.djangoproject.com/ "Django | The Web framework for perfectionists with deadlines")'s built-in [Flatpages app](http://docs.djangoproject.com/en/dev/ref/contrib/flatpages/ "Django | The flatpages app | Django documentation").
